--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "carbone": "^1.2.1",
     "express": "^4.17.1",
     "formidable": "^1.2.1",
+    "generate-password": "^1.4.2",
+    "js-sha512": "^0.8.0",
+    "moment": "^2.24.0",
+    "multer": "^1.4.2",
     "mysql": "^2.17.1",
+    "ng-file-upload": "^12.2.13",
+    "nodemailer": "^6.4.2",
     "nodemon": "^2.0.2"
   }
 }
